Creating a Responsive Web Design

--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css">
 	</head>
 	<body>
+		<div id="page">
 
+			<header></header>
 
-		<!-- markup goes here -->
+			<section id="main"></section>
 
-		
+			<section id="atmosphere"></section>
 
+			<section id="how-to"></section>
+
+			<nav></nav>
+
+			<footer></footer>
+			
+		</div>
 	</body>
 </html>
