Adding Content into the Header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 	<body>
 		<div id="page">
 
-			<header></header>
+			<header>
+				<a class="log" title="Everyday things" href="https://codifydesign.com/">Everyday Things</a>
+				<div class="hero">
+					<h1>Ad interest with natural features</h1>
+					<a class="btn" title="Get advice from top designers">Get advice from top designers</a>
+				</div>
+			</header>
 
 			<section id="main"></section>
 
@@ -20,7 +26,7 @@
 			<nav></nav>
 
 			<footer></footer>
-			
+
 		</div>
 	</body>
 </html>
