Preparing the HTML Content and Structure : Add Content to the How-to Section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,28 @@
 				</article>
 			</section>
 
-			<section id="how-to"></section>
+			<section id="how-to">
+				<aside>
+					<div class="content">
+						<img alt="Choosing the proper seating" src="images/photo_seating.jpg">
+						<h4>How-To: Seating</h4>
+						<p>Consectetuer adipiscing elit. Morbi commodo ipsum sed gravida orci magna rhoncus pulvinar odio lorem.</p>
+						<a title="Learn how to choose the proper seating." href="http://codifydesign.com">Learn more</a>
+					</div>
+				</aside>
+				<aside>
+					<div class="content">
+						<img alt="Choosing the proper lighting" src="images/photo_lighting.jpg">
+						<h4>How-To: Lighting</h4>
+						<p>Morbi commodo, ipsum sed pharetra gravida magna rhoncus neque id pulvinar odio lorem non turpis nullam sit amet.</p>
+						<a title="Learn how to choose the proper lighting." href="http://codifydesign.com">Learn more</a>
+					</div>
+				</aside>
+				<blockquote>
+					<p class="quote">Lorem ipsum dolor sit amet conse ctetuer adipiscing elit. Morbi comod sed dolor sit amet consect adipiscing elit.</p>
+					<p class="credit">Author Name Business Title Company</p>
+				</blockquote>
+			</section>
 
 			<nav></nav>
 
