--- a/index.html
+++ b/index.html
@@ -69,7 +69,57 @@
 				</blockquote>
 			</section>
 
-			<nav></nav>
+			<nav>
+				<ul>
+					<li>
+						<a href="About us" href="#">About us</a>
+						<ul>
+							<li>
+								<a title="Sub Link 1" href="#">Sub Link 1</a>
+							</li>
+							<li>
+								<a title="Sub Link 2" href="#">Sub Link 2</a>
+							</li>
+						</ul>
+					</li>
+					<li>
+						<a href="Design Corner" href="#">Design Corner</a>
+						<ul>
+							<li>
+								<a title="Sub Link 1" href="#">Sub Link 1</a>
+							</li>
+							<li>
+								<a title="Sub Link 2" href="#">Sub Link 2</a>
+							</li>
+							<li>
+								<a title="Sub Link 3" href="#">Sub Link 3</a>
+								<ul>
+									<li>
+										<a title="Sub Sub Link 1" href="#">Sub Sub Link 1</a>
+									</li>
+									<li>
+										<a title="Sub Sub Link 2" href="#">Sub Sub Link 2</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li>
+						<a href="Products" href="#">Products</a>
+						<ul>
+							<li>
+								<a title="Sub Link 1" href="#">Sub Link 1</a>
+							</li>
+							<li>
+								<a title="Sub Link 2" href="#">Sub Link 2</a>
+							</li>
+						</ul>
+					</li>
+					<li>
+						<a href="Contact Us" href="#">Contact Us</a>
+					</li>
+				</ul>
+			</nav>
 
 			<footer></footer>
 
