--- a/index.html
+++ b/index.html
@@ -121,7 +121,13 @@
 				</ul>
 			</nav>
 
-			<footer></footer>
+			<footer>
+				@copy; Everyday Things
+				<div class="content">
+					<a title="Privacy Policy" href="#">Privacy Policy</a>
+					<a title="Terms of Service" href="#">Terms of Service</a>
+				</div>
+			</footer>
 
 		</div>
 	</body>
