Creating the Style and Layout with CSS : Style the Logo and Hero Item

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="page">
 
 			<header>
-				<a class="log" title="Everyday things" href="https://codifydesign.com/">Everyday Things</a>
+				<a class="logo" title="Everyday things" href="https://codifydesign.com/"><span>Everyday Things</span></a>
 				<div class="hero">
 					<h1>Ad interest with natural features</h1>
 					<a class="btn" title="Get advice from top designers">Get advice from top designers</a>
