Setting up Three-column Row

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</div>
 			</header>
 
-			<section id="main">
+			<section class="main">
 				<aside>
 					<div class="content">
 						<h3><a href="#">What&apos;s trending</a></h3>
