--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 
 			<section class="main">
 				<aside>
-					<div class="content">
+					<div class="content trending">
 						<h3><a href="#">What&apos;s trending</a></h3>
 						<p>Lorem ipsum dolor sit amet, consect etuer adipiscing elit. <a href="http://codifydesign.com">Morbi commodo</a>, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis.</p>
 					</div>	
 				</aside>
 				<aside>
-					<div class="content">						
+					<div class="content find-it">						
 						<h3><a href="#">Where to find it</a></h3>
 						<p>Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Lorem ipsum dolor sit amet, consect.</p>
 					</div>
 				</aside>
 				<aside>
-					<div class="content">						
+					<div class="content tools">						
 						<h3><a href="#">Tools of the trade</a></h3>
 						<p>Nullam sit amet enim. Lorem ipsum dolor sit amet, consect etuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci rhoncus neque, id pulvinar odio.</p>
 					</div>
