--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 				</aside>
 			</section>
 
-			<section id="atmosphere">
+			<section class="atmosphere">
 				<article>
 					<h2>Creating a modern atmosphere</h2>
-					<p>Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Lorem ipsum dolor sit amet etuer adipiscing elit.  Pulvinar odio lorem non turpis. Nullam sit amet enim lorem.</p>
-					<a href="btn" title="Creating a modern atmosphere" href="#">Learn more</a>
+					<p>Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Lorem ipsum dolor sit amet etuer adipiscing elit.  Pulvinar odio lorem non turpis. Nullam sit amet enim lorem.
+					</p>
+					<a href="#" class="btn" title="Creating a modern atmosphere" href="#">Learn more</a>
 				</article>
 			</section>
 
