Creating the Style and Layout with CSS : Styling the How-To Section Aside Elements

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</article>
 			</section>
 
-			<section id="how-to">
+			<section class="how-to">
 				<aside>
 					<div class="content">
 						<img alt="Choosing the proper seating" src="images/photo_seating.jpg">
@@ -66,7 +66,7 @@
 				</aside>
 				<blockquote>
 					<p class="quote">Lorem ipsum dolor sit amet conse ctetuer adipiscing elit. Morbi comod sed dolor sit amet consect adipiscing elit.</p>
-					<p class="credit">Author Name Business Title Company</p>
+					<p class="credit"><strong>Author Name</strong><br><em>Business Title Company</em></p>
 				</blockquote>
 			</section>
 
