--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<nav>
 				<ul>
 					<li>
-						<a href="About us" href="#">About us</a>
+						<a title="About us" href="#" aria-haspopup="true">About us</a>
 						<ul>
 							<li>
 								<a title="Sub Link 1" href="#">Sub Link 1</a>
@@ -84,7 +84,7 @@
 						</ul>
 					</li>
 					<li>
-						<a href="Design Corner" href="#">Design Corner</a>
+						<a title="Design Corner" href="#" aria-haspopup="true">Design Corner</a>|
 						<ul>
 							<li>
 								<a title="Sub Link 1" href="#">Sub Link 1</a>
@@ -93,7 +93,7 @@
 								<a title="Sub Link 2" href="#">Sub Link 2</a>
 							</li>
 							<li>
-								<a title="Sub Link 3" href="#">Sub Link 3</a>
+								<a title="Sub Link 3" href="#" aria-haspopup="true">Sub Link 3</a>
 								<ul>
 									<li>
 										<a title="Sub Sub Link 1" href="#">Sub Sub Link 1</a>
@@ -106,7 +106,7 @@
 						</ul>
 					</li>
 					<li>
-						<a href="Products" href="#">Products</a>
+						<a title="Products" href="#" aria-haspopup="true">Products</a>
 						<ul>
 							<li>
 								<a title="Sub Link 1" href="#">Sub Link 1</a>
