--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<section class="how-to">
 				<aside>
 					<div class="content">
-						<img alt="Choosing the proper seating" src="images/photo_seating.jpg">
+						<img alt="Choosing the proper seating" src="images/photo-cdm.jpg">
 						<h4>How-To: Seating</h4>
 						<p>Consectetuer adipiscing elit. Morbi commodo ipsum sed gravida orci magna rhoncus pulvinar odio lorem.</p>
 						<a title="Learn how to choose the proper seating." href="http://codifydesign.com">Learn more</a>
